@@ -1,5 +1,7 @@
 2007-12-19  Dmitry Xmelkov  <dmix@gmail.ru>
 
+	* include/stdlib.h: Add '__' prefix with function args.
+
 	* include/string.h: Add '__' prefix with function args. The ffs(),
 	ffsl(), ffsll(): cosmetic changes to improve Doxygen output.
 
